[project]
name = "nico-download"
version = "0.3.0"
description = ""
authors = [{name = "TaizoAyase", email = "zxcvbnmkind@gmail.com"}]
requires-python = ">=3.11"
dependencies = [
    "requests>=2.26.0,<3.0.0",
    "nndownload>=1.11,<2.0.0",
    "toml>=0.10.2,<1.0.0",
    "colorlog<5.0.0",
    "omegaconf>=2.3.0,<3.0.0",
    "python-socks<2.0.0",
]

[dependency-groups]
dev = [
    "pysen>=0.10.4,<1.0.0",
    "ipython>=7.25.0,<8.0.0",
    "jedi==0.17.2",
    "pytest-cov>=2.12.1,<3.0.0",
    "bump2version>=1.0.1,<2.0.0",
    "black>=23.7.0,<24.0.0",
    "flake8>=6.0.0,<7.0.0",
    "mypy>=1.4.1,<2.0.0",
    "isort>=5.12.0,<6.0.0",
]

[tool.setuptools]
packages = ["nico_download"]

[tool.uv]
cache-dir = "./tmp"

[tool.pysen.lint]
enable_black = true
enable_flake8 = true
enable_isort = true
enable_mypy = true
mypy_preset = "strict"
line_length = 88
py_version = "py311"

[[tool.pysen.lint.mypy_targets]]
paths = ["."]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
